# CinemaProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: urls.py
api/API/: authentication.py  filters.py  permissions.py  resources.py  serializers.py
cinema/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
cinema/migrations/: 0001_initial.py  0002_film_screencinema_alter_spectator_wallet_showtime.py  0002_initial.py  0003_delete_spectatorprofile.py  0003_remove_showtime_price_currency_alter_showtime_price_and_more.py  0004_alter_showtime_options_screenhall_slug.py  0004_alter_spectator_wallet_ticket.py  0005_alter_screenhall_slug.py  0005_showtime_attendance.py  0006_alter_screencinema_name_alter_spectator_is_staff_and_more.py  0007_showtime_end_showtime_start.py  0008_alter_showtime_options_remove_showtime_date_and_more.py  0009_film_to_rental_alter_showtime_attendance_and_more.py
cinema/templatetags/: __init__.py  week_period_tag.py  week_tag.py
cinema_admin/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cinema_admin/migrations/: 0001_initial.py  0003_spectatorprofile.py  (+3 more)
cinema_project/: asgi.py  constants.py  settings.py  urls.py
diploma/: settings.py  urls.py
dumps/: cinema.dump  cinema_backup.sql  cinema_backup_custom  cinema_film.dump  cinema_screen.dump  film.dump  films  screenhall.dump
fixtures/: fixture_19-08.json
sockets/: consumers.py  routing.py  urls.py  views.py
staff/: forms.py  urls.py  views.py
utils/: __init__.py  errors.py  helpers.py  mixins.py  select_show.py  validators.py
(+49 files in other folders)
