[tool.poetry]
name = "cinemaproject"
version = "0.1.0"
description = ""
authors = ["Deriuhin Serhii <deriuhins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.4"
channels = "^4.0.0"
daphne = "^4.0.0"


[tool.poetry.group.dev.dependencies]
asgiref = {version = "3.7.2", allow-prereleases = true}
babel = {version = "2.10.3", allow-prereleases = true}
django = {version = "4.2.6", allow-prereleases = true}
django-debug-toolbar = {version = "4.2.0", allow-prereleases = true}
django-extensions = {version = "3.2.3", allow-prereleases = true}
django-money = {version = "3.0.0", allow-prereleases = true}
djangorestframework = {version = "3.14.0", allow-prereleases = true}
pillow = {version = "9.2.0", allow-prereleases = true}
psycopg2-binary = {version = "2.9.3", allow-prereleases = true}
py-moneyed = {version = "2.0", allow-prereleases = true}
python-dotenv = {version = "1.0.0", allow-prereleases = true}
pytz = {version = "2023.3.post1", allow-prereleases = true}
sqlparse = {version = "0.4.4", allow-prereleases = true}
typing-extensions = {version = "4.8.0", allow-prereleases = true}
tzdata = {version = "2022.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
